fix(loader): overlay z-index

--- a/src/components/reusable/loaders/loader.scss
+++ b/src/components/reusable/loaders/loader.scss
@@ -34,6 +34,7 @@
     bottom: 0;
     left: 0;
     background: var(--kd-color-dark-opacity-50);
+    z-index: var(--kd-z-overlay);
   }
 }
 
